# 2D_Engine

./: .gitignore  CMakeLists.txt  Notes.md  README.md  main.cpp
include/: Game.hpp  Logger.hpp
src/: Game.cpp  Logger.cpp
